# brokerage-statement

./: README.md  pyproject.toml
brokerage_statement/: __init__.py  __main__.py  factory.py  models.py  pdf.py  report.py
brokerage_statement/pdf/: models.py  utils.py
brokerage_statement/report/: console.py
tests/: conftest.py  test_brokerage_statement.py
