[tool.poetry]
name = "brokerage-statement"
version = "0.1.0"
description = ""
authors = ["Jonatha Daguerre Vasconcelos <jonatha@daguerre.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
"pdfminer.six" = "^20220319"
pydantic = "^1.9.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
snapshottest = "^0.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
